scenarios/03-https/30-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-multi-namespace-gateway
  namespace: gateway-system
  labels:
    app.kubernetes.io/part-of: demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.example.test"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: https-gateway-tls
      allowedRoutes:
        namespaces:
          from: All
